Ensure new design of share box wraps below content

--- a/css/small.css
+++ b/css/small.css
@@ -641,7 +641,7 @@ a.subscribe { display: block; margin: .692308em 0; } /* 9px/13px line-space spli
 .ie6 .share { display: inline-block; } /* hasLayout to contain floats */
 
 /* .share-page is a simpler replacement for .share */
-.text .share-page { margin: 1.384615em 0; }
+.text .share-page { margin: 1.384615em 0;clear: both; }
 .text .share-page a { margin-right: 1em; }
 
 /* Supporting content sits under an .article.
